[package]
name = "zbars"
version = "0.2.1-dev"
authors = ["Marcus Behrendt <marcus.behrendt.86@gmail.com>"]
license = "LGPL-2.1"
description = "High-level rust bindings to the zbar library"
repository = "https://github.com/marhkb/zbar-rs.git"
documentation = "https://docs.rs/crate/zbars"
readme = "README.md"
keywords = ["bindings", "ffi", "image", "library", "multimedia"]
categories = ["api-bindings", "multimedia", "multimedia::images", "external-ffi-bindings", ]
maintenance = { status = "experimental" }
build = "build.rs"
links = "zbar"

[badges]
travis-ci = { repository = "marhkb/zbars" }

[features]
default = ["from_image", "zbar_fork_if_available"]
from_image = ["image"]
zbar_fork_if_available = [] # There is a fork of zbar that is more activly developed (https://github.com/procxx/zbar)

[dependencies]
image = { version = "0.19.0", optional = true }

[dev-dependencies]
image = "0.19.0"
lazy_static = { version = "1.1.0" }

[target.'cfg(target_os="linux")'.dev-dependencies]
procinfo = "0.4.2"

[build-dependencies]
bindgen = "0.39.0"

[target.'cfg(unix)'.build-dependencies]
pkg-config = "0.3.14"

[[example]]
name = "scan_image"
path = "examples/imagescanner/scan_image/main.rs"

[[example]]
name = "process_one"
path = "examples/processor/process_one/main.rs"

[[example]]
name = "process_image"
path = "examples/processor/process_image/main.rs"
